--- a/frontend/src/app/features/auth/signup/signup.component.html
+++ b/frontend/src/app/features/auth/signup/signup.component.html
@@ -1,1 +1,41 @@
-<p>signup works!</p>
+<div class="w-full md:max-w-md md:mx-auto md:mx-0 xl:max-w-full h-100 pt-12 pb-6 block">
+  <div>
+    <h1 class="text-3xl font-bold mb-8">Sign Up</h1>
+    <form action="">
+      <div class="mb-6">
+        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
+        <input type="text" name="email" id="email">
+      </div>
+      <div class="mb-6">
+        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+        <input type="text" name="email" id="email">
+      </div>
+      <div class="mb-6">
+        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Date of birth</label>
+        <input type="date" name="email" id="email">
+      </div>
+      <div class="mb-6">
+        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Country</label>
+        <select name="email" >
+          <option>Sri Lanka</option>
+        </select>
+      </div>
+      <div class="mb-6">
+        <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
+        <input type="password" name="password" id="password">
+      </div>
+      <div>
+        <button type="submit"
+                class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm
+                      font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2
+                      focus:ring-indigo-500">
+          Sign up
+        </button>
+      </div>
+    </form>
+    <hr class="my-6 border-gray-300 w-full">
+  </div>
+
+  <div><small class="font-mono text-xs text-gray-400">Made with <span
+    class="material-icons flex items-center text-red-500">favorite</span> by Bilal.</small></div>
+</div>
