--- a/frontend/src/app/features/layout/layout/layout.component.html
+++ b/frontend/src/app/features/layout/layout/layout.component.html
@@ -1,59 +1,109 @@
-<nav class="bg-indigo-700 border-gray-200 px-2 sm:px-4 py-2.5 text-white">
-  <div class="container flex flex-wrap justify-between items-center mx-auto">
-    <a href="https://flowbite.com" class="flex items-center">
-      <div class="w-[40px] h-[40px] mr-3 font-quiz text-indigo-700 text-2xl bg-white rounded flex items-center justify-center">Q</div>
-      <span class="self-center text-xl font-semibold whitespace-nowrap">Quiz jam</span>
-    </a>
-    <div class="flex items-center md:order-2">
-      <button type="button" class="flex mr-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="user-menu-button" aria-expanded="false" type="button" data-dropdown-toggle="dropdown">
-        <span class="sr-only">Open user menu</span>
-        <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-3.jpg" alt="user photo">
-      </button>
-      <!-- Dropdown menu -->
-      <div class="hidden z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600" id="dropdown">
-        <div class="py-3 px-4">
-          <span class="block text-sm text-gray-900 dark:text-white">Bonnie Green</span>
-          <span class="block text-sm font-medium text-gray-500 truncate dark:text-gray-400">name@flowbite.com</span>
+<nav class="fixed w-full bg-indigo-700 border-gray-200 px-2 sm:px-4 text-white">
+  <div class="container h-[56px] flex flex-wrap justify-between items-center mx-auto">
+    <div class="flex items-center gap-4">
+      <a href="" class="flex items-center">
+        <div
+          class="w-[36px] h-[36px] mr-3 font-quiz text-indigo-700 text-2xl bg-white rounded flex items-center justify-center">
+          Q
         </div>
-        <ul class="py-1" aria-labelledby="dropdown">
+        <span class="hidden md:block self-center text-xl font-semibold whitespace-nowrap">Quiz jam</span>
+      </a>
+      <div class="relative mr-3 md:mr-0 md:block grow max-w-md w-full">
+        <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+          <svg class="w-5 h-5 text-indigo-500" fill="currentColor" viewBox="0 0 20 20"
+               xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+                  d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                  clip-rule="evenodd"></path>
+          </svg>
+        </div>
+        <input type="text"
+               class="hidden md:block p-2 pl-10 w-full text-gray-900 bg-indigo-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500"
+               placeholder="Search...">
+      </div>
+    </div>
+    <div class="hidden md:flex items-center gap-2.5 md:order-2">
+
+      <div class="justify-between items-center w-full md:flex md:w-auto" id="mobile-menu-2">
+        <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
           <li>
-            <a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
+            <a routerLink="." routerLinkActive="text-white"
+               class="flex items-center gap-2 py-2 pr-4 pl-3 text-white rounded md:p-0"
+               aria-current="page">
+              <span class="material-icons text-2xl">home</span> Home</a>
           </li>
+
           <li>
-            <a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
+            <a href="#" class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-300 hover:text-white md:p-0">
+              <span class="material-icons text-2xl">people</span>
+              Friends
+            </a>
           </li>
+
           <li>
-            <a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Earnings</a>
-          </li>
-          <li>
-            <a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
+            <a href="#" class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-300 hover:text-white md:p-0">
+              <span class="material-icons text-2xl">apps</span>
+              Topics
+            </a>
           </li>
         </ul>
       </div>
-      <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-        <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-      </button>
-    </div>
-    <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="mobile-menu-2">
-      <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
-        <li>
-          <a href="#" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">Home</a>
-        </li>
-        <li>
-          <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
-        </li>
-        <li>
-          <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
-        </li>
-        <li>
-          <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Pricing</a>
-        </li>
-        <li>
-          <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
-        </li>
-      </ul>
+
+      <div class="flex items-center border-l border-slate-800 ml-3 pl-3 gap-1">
+        <button class="flex items-center justify-center w-10 h-10 rounded-full transition hover:bg-indigo-500">
+          <span class="material-icons text-xl ">chat</span>
+        </button>
+        <button class="flex items-center justify-center w-10 h-10 rounded-full transition hover:bg-indigo-500">
+          <span class="material-icons text-xl">notifications</span>
+        </button>
+        <button type="button"
+                #profileMenu
+                (click)="isProfileMenuOpen = !isProfileMenuOpen"
+                class="flex ml-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                id="user-menu-button" aria-expanded="false" type="button" data-dropdown-toggle="dropdown">
+          <span class="sr-only">Open user menu</span>
+          <img class="w-8 h-8 rounded-full" src="/assets/1623408653069.png" alt="user photo">
+        </button>
+      </div>
+
     </div>
   </div>
 </nav>
+
+<router-outlet></router-outlet>
+
+
+
+<!--profile menu-->
+<ng-template
+  cdkConnectedOverlay
+  [cdkConnectedOverlayOrigin]="profileMenu"
+  [cdkConnectedOverlayOpen]="isProfileMenuOpen"
+>
+  <div
+    class="z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow"
+    id="dropdown">
+    <div class="py-3 px-4">
+      <span class="block text-sm text-gray-900 ">Bonnie Green</span>
+      <span class="block text-sm font-medium text-gray-500 truncate">name@flowbite.com</span>
+    </div>
+    <ul class="py-1" aria-labelledby="dropdown">
+      <li>
+        <a href="#"
+           class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 ">Dashboard</a>
+      </li>
+      <li>
+        <a href="#"
+           class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
+      </li>
+      <li>
+        <a href="#"
+           class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100">Earnings</a>
+      </li>
+      <li>
+        <a href="#"
+           class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100">Sign out</a>
+      </li>
+    </ul>
+  </div>
+</ng-template>
