--- a/frontend/src/app/features/layout/layout/layout.component.html
+++ b/frontend/src/app/features/layout/layout/layout.component.html
@@ -1,9 +1,9 @@
-<nav class="fixed w-full bg-indigo-700 border-gray-200 px-2 sm:px-4 text-white">
-  <div class="container h-[56px] flex flex-wrap justify-between items-center mx-auto">
+<nav class="fixed w-full bg-white border border-gray-200 px-2 sm:px-4 px-2 sm:px-4">
+  <div class="container h-[48px] flex flex-wrap justify-between items-center mx-auto">
     <div class="flex items-center gap-4">
       <a href="" class="flex items-center">
         <div
-          class="w-[36px] h-[36px] mr-3 font-quiz text-indigo-700 text-2xl bg-white rounded flex items-center justify-center">
+          class="w-[36px] h-[36px] mr-3 font-quiz text-white text-2xl bg-indigo-700 rounded flex items-center justify-center">
           Q
         </div>
         <span class="hidden md:block self-center text-xl font-semibold whitespace-nowrap">Quiz jam</span>
@@ -18,7 +18,7 @@
           </svg>
         </div>
         <input type="text"
-               class="hidden md:block p-2 pl-10 w-full text-gray-900 bg-indigo-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500"
+               class="hidden md:block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-indigo-500 focus:border-indigo-500"
                placeholder="Search...">
       </div>
     </div>
@@ -27,21 +27,21 @@
       <div class="justify-between items-center w-full md:flex md:w-auto" id="mobile-menu-2">
         <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
           <li>
-            <a routerLink="." routerLinkActive="text-white"
-               class="flex items-center gap-2 py-2 pr-4 pl-3 text-white rounded md:p-0"
+            <a routerLink="." routerLinkActive="text-indigo-700"
+               class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-700 md:border-0 md:hover:text-indigo-700 rounded md:p-0"
                aria-current="page">
               <span class="material-icons text-2xl">home</span> Home</a>
           </li>
 
           <li>
-            <a href="#" class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-300 hover:text-white md:p-0">
+            <a href="#" class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-700 md:border-0 md:hover:text-indigo-700 md:p-0">
               <span class="material-icons text-2xl">people</span>
               Friends
             </a>
           </li>
 
           <li>
-            <a href="#" class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-300 hover:text-white md:p-0">
+            <a href="#" class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-700 md:border-0 md:hover:text-indigo-700 md:p-0">
               <span class="material-icons text-2xl">apps</span>
               Topics
             </a>
@@ -49,17 +49,17 @@
         </ul>
       </div>
 
-      <div class="flex items-center border-l border-slate-800 ml-3 pl-3 gap-1">
-        <button class="flex items-center justify-center w-10 h-10 rounded-full transition hover:bg-indigo-500">
+      <div class="flex items-center border-l border-slate-200 ml-3 pl-3 gap-1">
+        <button class="flex items-center justify-center w-10 h-10 rounded-full transition hover:bg-gray-200 hover:text-indigo-700">
           <span class="material-icons text-xl ">chat</span>
         </button>
-        <button class="flex items-center justify-center w-10 h-10 rounded-full transition hover:bg-indigo-500">
+        <button class="flex items-center justify-center w-10 h-10 rounded-full transition hover:bg-gray-200 hover:text-indigo-700">
           <span class="material-icons text-xl">notifications</span>
         </button>
         <button type="button"
                 #profileMenu
                 (click)="isProfileMenuOpen = !isProfileMenuOpen"
-                class="flex ml-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                class="flex ml-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300"
                 id="user-menu-button" aria-expanded="false" type="button" data-dropdown-toggle="dropdown">
           <span class="sr-only">Open user menu</span>
           <img class="w-8 h-8 rounded-full" src="/assets/1623408653069.png" alt="user photo">
@@ -69,8 +69,9 @@
     </div>
   </div>
 </nav>
-
-<router-outlet></router-outlet>
+<div class="w-full h-full bg-gray-100 relative">
+<!--  <router-outlet></router-outlet>-->
+</div>
 
 
 
