--- a/frontend/src/app/features/layout/home/home/home.component.html
+++ b/frontend/src/app/features/layout/home/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="max-w-5xl container mx-auto px-4 bg-white">
+  <h1 class="text-xl font-bold">Welcome to Quiz Jame</h1>
+
+</div>
