--- a/frontend/src/app/features/auth/signin/signin.component.html
+++ b/frontend/src/app/features/auth/signin/signin.component.html
@@ -2,19 +2,17 @@
   <div class="mb-8">
     <h1 class="text-2xl font-bold">Login to your Account</h1>
   </div>
-  <form action="">
+  <form [formGroup]="formGroup">
     <div class="mb-6">
       <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-      <input type="email" name="email" id="email"
-             class="w-full border border-gray-300 rounded-lg shadow-sm
-                     focus:border-indigo-500 focus:ring-indigo-500">
+      <input type="email" name="email" id="email">
     </div>
     <div class="mb-3">
       <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
       <input type="password" name="password" id="password">
     </div>
     <div class="text-right mb-6">
-      <a href="#" class="font-semibold text-gray-700 text-sm hover:text-indigo-700">Forgot password?</a>
+      <a routerLink="../forgot-password" class="font-semibold text-gray-700 text-sm hover:text-indigo-700">Forgot password?</a>
     </div>
     <div>
       <button type="submit"
