--- a/frontend/src/app/features/layout/topics/topics/topics.component.html
+++ b/frontend/src/app/features/layout/topics/topics/topics.component.html
@@ -1,1 +1,14 @@
-<p>topics works!</p>
+<div class="container mx-auto px-4 py-4">
+
+  <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
+    <div class="max-w-sm bg-white rounded overflow-hidden shadow-md cursor-pointer transition hover:shadow-lg">
+<!--      <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains">-->
+      <div class="bg-gray-400 w-full aspect-square block text-8xl text-slate-50 font-quiz flex items-center justify-center">
+        Q
+      </div>
+      <div class="px-2 py-4">
+        <div class="font-bold text-md mb-2 text-slate-600">Simple Maths</div>
+      </div>
+    </div>
+  </div>
+</div>
