--- a/frontend/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -3,10 +3,10 @@
     <h1 class="text-3xl font-bold mb-3">Forgot Password</h1>
     <p class="text-sm text-gray-400">Just enter the email address you've used to register with us and we'll send you a reset link</p>
   </div>
-  <form action="">
+  <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
     <div class="mb-6">
       <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email address</label>
-      <input type="email" name="email" id="email">
+      <input type="email" name="email" id="email" formControlName="email">
     </div>
     <div>
       <button type="submit"
@@ -19,7 +19,7 @@
   </form>
   <hr class="my-6 border-gray-300 w-full">
   <p class="text-sm mb-3">
-    <a href="#" class="font-semibold text-indigo-500 text-sm hover:text-indigo-700">Back to login?</a></p>
+    <a routerLink="../login" class="font-semibold text-indigo-500 text-sm hover:text-indigo-700">Back to login?</a></p>
   <small class="font-mono text-xs text-gray-400">Made with <span
     class="material-icons flex items-center text-red-500">favorite</span> by Bilal.</small>
 </div>
