--- a/frontend/src/app/features/auth/reset-password/reset-password.component.html
+++ b/frontend/src/app/features/auth/reset-password/reset-password.component.html
@@ -1,1 +1,24 @@
-<p>reset-password works!</p>
+<div class="w-full md:max-w-md md:mx-auto md:mx-0 xl:max-w-full h-100 pt-12 pb-6 block">
+  <div class="mb-8">
+    <h1 class="text-3xl font-bold mb-3">Reset Password</h1>
+  </div>
+  <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" autocomplete="off">
+    <div class="mb-6">
+      <label for="password" class="block text-sm font-medium text-gray-700 mb-1">New Password</label>
+      <input type="password" name="password" id="password" autocomplete="ew-password" formControlName="password">
+    </div>
+    <div>
+      <button type="submit"
+              class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm
+                      font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2
+                      focus:ring-indigo-500">
+        Reset
+      </button>
+    </div>
+  </form>
+  <hr class="my-6 border-gray-300 w-full">
+  <p class="text-sm mb-3">
+    <a routerLink="../login" class="font-semibold text-indigo-500 text-sm hover:text-indigo-700">Back to login?</a></p>
+  <small class="font-mono text-xs text-gray-400">Made with <span
+    class="material-icons flex items-center text-red-500">favorite</span> by Bilal.</small>
+</div>
