--- a/frontend/src/app/features/auth/signin/signin.component.html
+++ b/frontend/src/app/features/auth/signin/signin.component.html
@@ -2,14 +2,14 @@
   <div class="mb-8">
     <h1 class="text-2xl font-bold">Login to your Account</h1>
   </div>
-  <form [formGroup]="formGroup">
-    <div class="mb-6">
-      <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-      <input type="email" name="email" id="email">
+  <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+    <div class="mb-4">
+      <label for="email" class="mb-2 block text-sm font-medium text-gray-700">Email</label>
+      <input type="email" formControlName="email" name="email" id="email">
     </div>
-    <div class="mb-3">
-      <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-      <input type="password" name="password" id="password">
+    <div class="mb-4">
+      <label for="password" class="mb-2 block text-sm font-medium text-gray-700">Password</label>
+      <input type="password" formControlName="password" name="password" id="password">
     </div>
     <div class="text-right mb-6">
       <a routerLink="../forgot-password" class="font-semibold text-gray-700 text-sm hover:text-indigo-700">Forgot password?</a>
@@ -19,13 +19,13 @@
               class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm
                       font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2
                       focus:ring-indigo-500">
-        Sign up
+        Sign In
       </button>
     </div>
   </form>
   <hr class="my-6 border-gray-300 w-full">
   <p class="text-sm mb-3">Need an account?
-    <a href="#" class="font-semibold text-indigo-500 text-sm hover:text-indigo-700">Create an account</a></p>
+    <a routerLink="../signup" class="font-semibold text-indigo-500 text-sm hover:text-indigo-700">Create an account</a></p>
   <small class="font-mono text-xs text-gray-400">Made with <span
     class="material-icons flex items-center text-red-500">favorite</span> by Bilal.</small>
 </div>
