--- a/frontend/src/app/features/auth/signup/signup.component.html
+++ b/frontend/src/app/features/auth/signup/signup.component.html
@@ -1,28 +1,46 @@
 <div class="w-full md:max-w-md md:mx-auto md:mx-0 xl:max-w-full h-100 pt-12 pb-6 block">
   <div>
     <h1 class="text-3xl font-bold mb-8">Sign Up</h1>
-    <form action="">
-      <div class="mb-6">
-        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
-        <input type="text" name="email" id="email">
+    <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" autocomplete="off">
+      <div class="mb-4">
+        <label for="name" class="block text-sm font-medium text-gray-700 mb-2">Name</label>
+        <input type="text" formControlName="name" name="name" id="name">
       </div>
-      <div class="mb-6">
-        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
-        <input type="text" name="email" id="email">
+      <div class="mb-4">
+        <label for="email" class="block text-sm font-medium text-gray-700 mb-2">Email</label>
+        <input type="text" formControlName="email" name="email" id="email">
       </div>
-      <div class="mb-6">
-        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Date of birth</label>
-        <input type="date" name="email" id="email">
+      <div class="mb-4">
+        <label for="dob" class="block text-sm font-medium text-gray-700 mb-2">Date of birth</label>
+        <input matInput [matDatepicker]="picker" type="text" (focus)="picker.open()" name="dob" id="dob" formControlName="dob">
+        <mat-datepicker #picker startView="multi-year" [startAt]="startDate"></mat-datepicker>
       </div>
-      <div class="mb-6">
-        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Country</label>
-        <select name="email" >
-          <option>Sri Lanka</option>
+      <div class="mb-4">
+        <label class="block text-sm font-medium text-gray-700 mb-2">Gender</label>
+        <div class="flex gap-2">
+          <div *ngFor="let data of genders" class="flex items-center gap-1.5">
+            <input class="rounded-full" formControlName="gender" type="radio" [id]="data.code" [value]="data.code">
+            <label class="form-check-label inline-block text-gray-800" [for]="data.code" >{{data?.name}}</label>
+          </div>
+        </div>
+      </div>
+      <div class="mb-4">
+        <label for="country" class="block text-sm font-medium text-gray-700 mb-2">Country</label>
+        <select name="country" formControlName="country" id="country">
+          <option *ngFor="let data of countries" [value]="data.code">{{data?.name}}</option>
         </select>
       </div>
-      <div class="mb-6">
-        <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-        <input type="password" name="password" id="password">
+      <div class="mb-4">
+        <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
+        <div class="relative w-full">
+          <div class="absolute inset-y-0 right-0 flex items-center px-2">
+            <button type="button" (click)="hide=!hide" mat-icon-button class="absolute inset-y-0 right-0 flex items-center px-2">
+              <mat-icon class="text-slate-600">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+            </button>
+          </div>
+          <input class="pr-16" formControlName="password" id="password" [type]="hide ? 'password': 'text'" autocomplete="new-password"
+          />
+        </div>
       </div>
       <div>
         <button type="submit"
