--- a/frontend/src/app/features/layout/components/layout/layout.component.html
+++ b/frontend/src/app/features/layout/components/layout/layout.component.html
@@ -87,12 +87,12 @@
     </div>
     <ul class="py-1" aria-labelledby="dropdown">
       <li>
-        <a href="#"
+        <a routerLink="profile"
            class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 ">Account</a>
       </li>
       <li>
-        <a href="#"
-           class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100">Create Topic</a>
+        <a (click)="createTopic()"
+           class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 cursor-pointer">Create Topic</a>
       </li>
       <li>
         <a (click)="logout()"
