--- a/frontend/src/app/features/layout/components/topic-dialog/topic-dialog.component.html
+++ b/frontend/src/app/features/layout/components/topic-dialog/topic-dialog.component.html
@@ -1,1 +1,19 @@
-<p>topic-dialog works!</p>
+<h2 mat-dialog-title>Create Topic</h2>
+<mat-dialog-content class="mat-typography">
+  <form [formGroup]="formGroup">
+    <mat-form-field class="w-full" appearance="fill">
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name" >
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="w-full">
+      <mat-label>Category</mat-label>
+      <mat-select formControlName="CategoryId">
+        <mat-option *ngFor="let data of categories" [value]="data.id">{{data.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </form>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-flat-button color="primary">Create</button>
+</mat-dialog-actions>
