--- a/frontend/src/app/features/layout/components/layout/layout.component.html
+++ b/frontend/src/app/features/layout/components/layout/layout.component.html
@@ -13,12 +13,12 @@
 
       <div class="justify-between items-center w-full md:flex md:w-auto" id="mobile-menu-2">
         <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
-          <li>
-            <a routerLink="." routerLinkActive="text-indigo-700"
-               class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-700 md:border-0 md:hover:text-indigo-700 rounded md:p-0"
-               aria-current="page">
-              <span class="material-icons text-2xl">home</span> Home</a>
-          </li>
+<!--          <li>-->
+<!--            <a routerLink="." routerLinkActive="text-indigo-700"-->
+<!--               class="flex items-center gap-2 py-2 pr-4 pl-3 text-gray-700 md:border-0 md:hover:text-indigo-700 rounded md:p-0"-->
+<!--               aria-current="page">-->
+<!--              <span class="material-icons text-2xl">home</span> Home</a>-->
+<!--          </li>-->
 
           <li>
             <a routerLink="topics" routerLinkActive="text-indigo-700"
@@ -67,7 +67,7 @@
     </div>
   </div>
 </nav>
-<div class="w-full h-full bg-gray-100 relative mt-[48px]">
+<div class="w-full min-h-full h-auto bg-gray-100 relative mt-[48px]">
   <router-outlet></router-outlet>
 </div>
 
@@ -75,15 +75,18 @@
 <!--profile menu-->
 <ng-template
   cdkConnectedOverlay
+  [cdkConnectedOverlayHasBackdrop]="true"
+  [cdkConnectedOverlayBackdropClass]="'opacity-0'"
+  (backdropClick)="isProfileMenuOpen = false"
   [cdkConnectedOverlayOrigin]="profileMenu"
   [cdkConnectedOverlayOpen]="isProfileMenuOpen"
 >
   <div
-    class="z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow"
+    class="z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow "
     id="dropdown">
     <div class="py-3 px-4">
-      <span class="block text-sm text-gray-900 ">Bonnie Green</span>
-      <span class="block text-sm font-medium text-gray-500 truncate">name@flowbite.com</span>
+      <span class="block text-sm text-gray-900 ">Bilal</span>
+      <span class="block text-sm font-medium text-gray-500 truncate">ahamedbilal@gmail.com</span>
     </div>
     <ul class="py-1" aria-labelledby="dropdown">
       <li>
