--- a/frontend/src/app/features/layout/components/topic-dialog/topic-dialog.component.html
+++ b/frontend/src/app/features/layout/components/topic-dialog/topic-dialog.component.html
@@ -8,12 +8,12 @@
     <mat-form-field appearance="fill" class="w-full">
       <mat-label>Category</mat-label>
       <mat-select formControlName="CategoryId">
-        <mat-option *ngFor="let data of categories" [value]="data.id">{{data.name}}</mat-option>
+        <mat-option *ngFor="let data of categories" [value]="data?.id">{{data?.name}}</mat-option>
       </mat-select>
     </mat-form-field>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-flat-button color="primary">Create</button>
+  <button mat-flat-button (click)="create()" color="primary">Create</button>
 </mat-dialog-actions>
