--- a/frontend/src/app/features/layout/topics/topics/topics.component.html
+++ b/frontend/src/app/features/layout/topics/topics/topics.component.html
@@ -1,13 +1,25 @@
 <div class="container mx-auto px-4 py-4">
+  <form class="example-form">
+    <mat-form-field class="w-full md:w-1/3" appearance="fill">
+      <mat-label>Search</mat-label>
+      <input type="search" matInput placeholder="search topic">
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+  </form>
 
-  <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <div class="max-w-sm bg-white rounded overflow-hidden shadow-md cursor-pointer transition hover:shadow-lg">
-<!--      <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains">-->
-      <div class="bg-gray-400 w-full aspect-square block text-8xl text-slate-50 font-quiz flex items-center justify-center">
-        Q
-      </div>
-      <div class="px-2 py-4">
-        <div class="font-bold text-md mb-2 text-slate-600">Simple Maths</div>
+  <div *ngFor="let data of categoryTopics" class="mb-4">
+    <h1 class="mb-4 font-bold text-xl">{{data?.name}}</h1>
+    <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
+      <div *ngFor="let topic of data?.topics"
+           routerLink="1"
+           class="max-w-sm bg-white rounded overflow-hidden shadow-md cursor-pointer transition hover:shadow-lg">
+        <div *ngIf="topic?.img" class="w-full aspect-square bg-cover" [style.background-image]="'url(' + topic.img + ')'"></div>
+        <div *ngIf="!topic?.img" class="bg-gray-400 w-full aspect-square block text-8xl text-slate-50 font-quiz flex items-center justify-center">
+          Q
+        </div>
+        <div class="px-2 py-4">
+          <div class="font-bold text-md mb-2 text-slate-600">{{topic?.name}}</div>
+        </div>
       </div>
     </div>
   </div>
