--- a/frontend/src/app/features/layout/components/layout/layout.component.html
+++ b/frontend/src/app/features/layout/components/layout/layout.component.html
@@ -47,6 +47,7 @@
 
       <div class="flex items-center border-l border-slate-200 ml-3 pl-3 gap-1">
         <button
+          routerLink="chat"
           class="flex items-center justify-center w-10 h-10 rounded-full transition hover:bg-gray-200 hover:text-indigo-700">
           <span class="material-icons text-xl ">chat</span>
         </button>
