--- a/frontend/src/app/features/layout/topics/page/layout/layout.component.html
+++ b/frontend/src/app/features/layout/topics/page/layout/layout.component.html
@@ -8,7 +8,7 @@
           <h1 class="font-extrabold text-3xl text-gray-800 capitalize mb-2">Basic Maths</h1>
           <div class="text-xs text-gray-400 mb-4 ">Players 10, 000</div>
           <div class="flex gap-2 mb-3">
-            <button mat-flat-button class="bg-red-600 text-white">
+            <button mat-flat-button class="bg-red-600 text-white" routerLink="game">
               <mat-icon>play_arrow</mat-icon>
               Play
             </button>
