--- a/frontend/src/app/features/layout/topics/page/leaderboard/leaderboard.component.html
+++ b/frontend/src/app/features/layout/topics/page/leaderboard/leaderboard.component.html
@@ -1,3 +1,75 @@
-<div class="max-w-5xl container mx-auto px-4">
+<div class="max-w-5xl container mx-auto px-4 pb-4 my-4">
+
+  <div class="border border-gray-300 rounded bg-white">
+    <mat-tab-group (selectedIndexChange)="change()" mat-align-tabs="center" backgroundColor="primary" animationDuration="0">
+      <mat-tab label="Country">
+
+        <table mat-table [dataSource]="dataSource" class="w-full">
+
+          <ng-container matColumnDef="rank">
+            <th mat-header-cell *matHeaderCellDef> Rank.</th>
+            <td mat-cell *matCellDef="let element; let i = index;"> {{i + 1}} </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name</th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="country">
+            <th mat-header-cell *matHeaderCellDef> Country</th>
+            <td mat-cell *matCellDef="let element"> SL</td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="xp">
+            <th mat-header-cell *matHeaderCellDef> XP</th>
+            <td mat-cell *matCellDef="let element"> {{element.xp | number}} </td>
+          </ng-container>
+
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <div *ngIf="!dataSource.length" class="p-24 text-center text-gray-500 bg-gray-100">NO DATA FOUND</div>
+
+
+      </mat-tab>
+      <mat-tab label="Global">
+        <table mat-table [dataSource]="dataSource" class="w-full">
+
+          <ng-container matColumnDef="rank">
+            <th mat-header-cell *matHeaderCellDef> Rank.</th>
+            <td mat-cell *matCellDef="let element; let i = index;"> {{i + 1}} </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name</th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="country">
+            <th mat-header-cell *matHeaderCellDef> Country</th>
+            <td mat-cell *matCellDef="let element"> SL</td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="xp">
+            <th mat-header-cell *matHeaderCellDef> XP</th>
+            <td mat-cell *matCellDef="let element"> {{element.xp | number}} </td>
+          </ng-container>
+
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <div *ngIf="!dataSource.length" class="p-24 text-center text-gray-500 bg-gray-100">NO DATA FOUND</div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 
 </div>
