--- a/frontend/src/app/features/layout/topics/page/settings/questions/question-dialog/question-dialog.component.html
+++ b/frontend/src/app/features/layout/topics/page/settings/questions/question-dialog/question-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Create Topic</h2>
+<h2 mat-dialog-title>Create Question</h2>
 <mat-dialog-content class="mat-typography">
   <form [formGroup]="formGroup">
     <mat-form-field class="w-full" appearance="fill">
@@ -18,19 +18,19 @@
     </mat-form-field>
 
     <mat-form-field class="w-full" appearance="fill">
-      <mat-label>Answer 1</mat-label>
+      <mat-label>Correct Answer</mat-label>
       <input matInput formControlName="ans1" >
     </mat-form-field>
     <mat-form-field class="w-full" appearance="fill">
-      <mat-label>Answer 2</mat-label>
+      <mat-label>Answer 1</mat-label>
       <input matInput formControlName="ans2" >
     </mat-form-field>
     <mat-form-field class="w-full" appearance="fill">
-      <mat-label>Answer 3</mat-label>
+      <mat-label>Answer 2</mat-label>
       <input matInput formControlName="ans3" >
     </mat-form-field>
     <mat-form-field class="w-full" appearance="fill">
-      <mat-label>Answer 4</mat-label>
+      <mat-label>Answer 3</mat-label>
       <input matInput formControlName="ans4" >
     </mat-form-field>
   </form>
