--- a/frontend/src/app/features/layout/topics/page/settings/settings.component.html
+++ b/frontend/src/app/features/layout/topics/page/settings/settings.component.html
@@ -12,9 +12,9 @@
           <mat-icon mat-list-icon>public</mat-icon>
           <h4 mat-line>General</h4>
         </mat-list-item>
-        <mat-list-item routerLink="members" routerLinkActive="active">
+        <mat-list-item routerLink="admins" routerLinkActive="active">
           <mat-icon mat-list-icon>group</mat-icon>
-          <h4 mat-line>Members</h4>
+          <h4 mat-line>Admins</h4>
         </mat-list-item>
         <mat-list-item routerLink="questions" routerLinkActive="active">
           <mat-icon mat-list-icon>help</mat-icon>
