--- a/frontend/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -4,10 +4,10 @@
     <p class="text-sm text-gray-400">Just enter the email address you've used to register with us and we'll send you a reset link</p>
   </div>
   <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-    <div class="mb-6">
-      <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email address</label>
-      <input type="email" name="email" id="email" formControlName="email">
-    </div>
+    <mat-form-field class="w-full" appearance="fill">
+      <mat-label>Email Address</mat-label>
+      <input matInput type="email" formControlName="email">
+    </mat-form-field>
     <div>
       <button type="submit"
               class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm
