--- a/frontend/src/app/features/auth/signin/signin.component.html
+++ b/frontend/src/app/features/auth/signin/signin.component.html
@@ -3,14 +3,17 @@
     <h1 class="text-2xl font-bold">Login to your Account</h1>
   </div>
   <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-    <div class="mb-4">
-      <label for="email" class="mb-2 block text-sm font-medium text-gray-700">Email</label>
-      <input type="email" formControlName="email" name="email" id="email">
-    </div>
-    <div class="mb-4">
-      <label for="password" class="mb-2 block text-sm font-medium text-gray-700">Password</label>
-      <input type="password" formControlName="password" name="password" id="password">
-    </div>
+    <mat-form-field class="w-full" appearance="fill">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email">
+    </mat-form-field>
+
+    <mat-form-field class="w-full" appearance="fill">
+      <mat-label>Password</mat-label>
+      <input matInput [type]="hide ? 'password': 'text'" formControlName="password">
+      <button matSuffix mat-icon-button type="button" (click)="hide=!hide"><mat-icon>{{hide ? 'visibility' : 'visibility_off'}}</mat-icon></button>
+    </mat-form-field>
+
     <div class="text-right mb-6">
       <a routerLink="../forgot-password" class="font-semibold text-gray-700 text-sm hover:text-indigo-700">Forgot password?</a>
     </div>
