--- a/frontend/src/app/features/layout/topics/page/about/about.component.html
+++ b/frontend/src/app/features/layout/topics/page/about/about.component.html
@@ -1,1 +1,11 @@
-<p>about works!</p>
+<div class="max-w-5xl container mx-auto p-4 relative">
+  <div class="bg-white border border-gray-300 rounded p-6">
+    <h3 class="font-semibold text-xl text-gray-800">About Community</h3>
+    <hr class="my-4">
+    <p class="text-gray-700">{{about}}</p>
+    <hr class="my-4">
+    <h3 class="font-semibold text-xl text-gray-800">Questions: 11</h3>
+    <hr class="my-4">
+    <h3 class="font-semibold text-xl text-gray-800">Players: 28</h3>
+  </div>
+</div>
